--- a/django/ui/templates/ui/for_me.html
+++ b/django/ui/templates/ui/for_me.html
@@ -53,6 +53,14 @@
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="skyblue"><div class="color-circle" style="background:#87CEEB;"></div><span>스카이블루</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="brown"><div class="color-circle" style="background:#8B4513;"></div><span>브라운</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="red"><div class="color-circle" style="background:#FF0000;"></div><span>레드</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="blue"><div class="color-circle" style="background:#0000FF;"></div><span>블루</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="lavender"><div class="color-circle" style="background:#E6E6FA;"></div><span>라벤더</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="purple"><div class="color-circle" style="background:#800080;"></div><span>퍼플</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="wine"><div class="color-circle" style="background:#722F37;"></div><span>와인</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="orange"><div class="color-circle" style="background:#FFA500;"></div><span>오렌지</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="yellow"><div class="color-circle" style="background:#FFFF00;"></div><span>옐로우</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="khaki"><div class="color-circle" style="background:#F0E68C;"></div><span>카키</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="mint"><div class="color-circle" style="background:#98FF98;"></div><span>민트</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="green"><div class="color-circle" style="background:#008000;"></div><span>그린</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="gold"><div class="color-circle" style="background:#FFD700;"></div><span>골드</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="top" data-value="silver"><div class="color-circle" style="background:#C0C0C0;"></div><span>실버</span></div>
@@ -96,9 +104,16 @@
                                     <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="skyblue"><div class="color-circle" style="background:#87CEEB;"></div><span>스카이블루</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="brown"><div class="color-circle" style="background:#8B4513;"></div><span>브라운</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="red"><div class="color-circle" style="background:#FF0000;"></div><span>레드</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="blue"><div class="color-circle" style="background:#0000FF;"></div><span>블루</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="lavender"><div class="color-circle" style="background:#E6E6FA;"></div><span>라벤더</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="purple"><div class="color-circle" style="background:#800080;"></div><span>퍼플</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="orange"><div class="color-circle" style="background:#FFA500;"></div><span>오렌지</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="yellow"><div class="color-circle" style="background:#FFFF00;"></div><span>옐로우</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="khaki"><div class="color-circle" style="background:#F0E68C;"></div><span>카키</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="mint"><div class="color-circle" style="background:#98FF98;"></div><span>민트</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="green"><div class="color-circle" style="background:#008000;"></div><span>그린</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="gold"><div class="color-circle" style="background:#FFD700;"></div><span>골드</span></div>
-                                    <div class="color-item" onclick="selectColor(this)" data-type="bottom" data-value="silver"><div class="color-circle" style="background:#C0C0C0;"></div><span>실버</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="tbottomop" data-value="silver"><div class="color-circle" style="background:#C0C0C0;"></div><span>실버</span></div>
                                 </div>
                             </div>
                             <button class="nav-btn" onclick="moveSlider('color-bottom', 1)"><span class="material-icons">chevron_right</span></button>
@@ -139,6 +154,14 @@
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="skyblue"><div class="color-circle" style="background:#87CEEB;"></div><span>스카이블루</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="brown"><div class="color-circle" style="background:#8B4513;"></div><span>브라운</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="red"><div class="color-circle" style="background:#FF0000;"></div><span>레드</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="blue"><div class="color-circle" style="background:#0000FF;"></div><span>블루</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="lavender"><div class="color-circle" style="background:#E6E6FA;"></div><span>라벤더</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="purple"><div class="color-circle" style="background:#800080;"></div><span>퍼플</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="wine"><div class="color-circle" style="background:#722F37;"></div><span>와인</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="orange"><div class="color-circle" style="background:#FFA500;"></div><span>오렌지</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="yellow"><div class="color-circle" style="background:#FFFF00;"></div><span>옐로우</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="khaki"><div class="color-circle" style="background:#F0E68C;"></div><span>카키</span></div>
+                                    <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="mint"><div class="color-circle" style="background:#98FF98;"></div><span>민트</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="green"><div class="color-circle" style="background:#008000;"></div><span>그린</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="gold"><div class="color-circle" style="background:#FFD700;"></div><span>골드</span></div>
                                     <div class="color-item" onclick="selectColor(this)" data-type="onepiece" data-value="silver"><div class="color-circle" style="background:#C0C0C0;"></div><span>실버</span></div>
