--- a/django/ui/static/ui/style.css
+++ b/django/ui/static/ui/style.css
@@ -516,13 +516,13 @@
 /* 텍스트(향수명/브랜드) */
 .mynote-text{ min-width: 240px; }
 .mynote-name{
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 700;
   color:#222;
   line-height: 1.2;
 }
 .mynote-brand{
-  font-size: 11px;
+  font-size: 15px;
   color:#888;
   margin-top: 4px;
 }
@@ -537,7 +537,7 @@
   min-width: 200px;
 }
 .mynote-score-label{
-  font-size: 11px;
+  font-size: 15px;
   color:#666;
 }
 .mynote-score-row{
@@ -551,16 +551,16 @@
   border: 1px solid #999;
   border-radius: 2px;
   text-align:center;
-  font-size: 12px;
+  font-size: 15px;
   padding:0;
   background:#fff;
 }
 .mynote-score-max{
-  font-size: 12px;
+  font-size: 14px;
   color:#333;
 }
 .mynote-score-value{
-  font-size: 12px;
+  font-size: 14px;
   color:#333;
   font-weight: 600;
 }
@@ -590,7 +590,7 @@
 }
 .mynote-cart-title{
   text-align:center;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 18px;
   color:#333;
@@ -613,7 +613,7 @@
 /* empty 문구 */
 .mynote-empty{
   color:#9a9a9a;
-  font-size: 13px;
+  font-size: 17px;
   padding: 8px 4px;
 }
 
@@ -675,7 +675,7 @@
 
 .section-title {
     text-align: left;
-    font-size: 18px;
+    font-size: 21px;
     margin-bottom: 12px;
 }
 
@@ -720,15 +720,16 @@
 
 .perfume-name {
     font-weight: 600;
+    font-size: 18px;
 }
 
 .perfume-brand {
-    font-size: 12px;
+    font-size: 16px;
     color: #777;
 }
 
 .perfume-score {
-    font-size: 14px;
+    font-size: 16px;
     text-align: right;
 }
 
@@ -762,10 +763,13 @@
 
 /* 전체 페이지 폭 */
 .result-page {
-    max-width: 1100px;
+    max-width: 880px;
     margin: 0 auto;
 }
-
+.result-narrow {
+  max-width: 880px;
+  margin: 0 auto;
+}
 /* 헤더 */
 .result-header {
     text-align: center;
@@ -820,7 +824,7 @@
 .mynote-result-box {
     background: #f5f3f3;
     border-radius: 18px;
-    padding: 30px;
+    padding: 18px 22px;
 }
 
 /* 🔥 핵심: 가로 정렬 */
@@ -828,7 +832,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 24px;
+    margin-bottom: 14px;
 }
 
 .mynote-result-row:last-child {
@@ -849,17 +853,17 @@
 
 /* 왼쪽 / 오른쪽 비율 */
 .style-section {
-  flex: 0.7;
+  flex: 0.8;
 }
 
 .perfume-section {
-  flex: 1.3;
+  flex: 1.2;
 }
 
 /* 스타일 이미지 박스 */
 .style-image-box {
   background: #f5f3f3;
-  padding: 30px;
+  padding: 18px 20px;
   border-radius: 18px;
 
   display: flex;
